--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+html {
+    background-color: aliceblue;
+}
 
 body {
     display: flex;
@@ -13,6 +16,9 @@ body {
     justify-content: center;
     align-items: center;
     gap: 3px;
+    background-color: rgb(78, 85, 97);
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .numbers {
@@ -37,6 +43,9 @@ body {
     flex: 0 1 0;
     padding-left: 7.75px;
     padding-right: 7.75px;
+    justify-content: flex-end;
+    margin-left:auto;
+    margin-right:2.5px;
 }
 
 .operations {
@@ -46,6 +55,10 @@ body {
     width: 25px;
     justify-content: space-between;
     gap: 3px;
+}
+
+.operations button{
+    background-color: rgb(110, 109, 171);
 }
 
 #clear {
@@ -60,9 +73,13 @@ body {
 .display {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     width: 111px;
+    height:25px;
+    background-color: rgb(117, 154, 146);
+    border-radius: 5px;
+    color:rgb(67, 97, 48);
 }
 
 .content {
@@ -70,3 +87,10 @@ body {
     flex-direction: row;
     gap: 3px;
 }
+
+button {
+    background-color: whitesmoke;
+    box-shadow: inset;
+    color:rgb(66, 63, 45);
+}
+
